Construção do service de consulta da api

--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
 
     client_max_body_size 108M;
 
-    # access_log /var/log/nginx/access.log;
+    access_log off;
 
     root /srv/vhosts/phpApp/public;
     index index.php;
